test/expected/xupc_explain_ri.out
explain relaxed int x
                ^
17: error: "relaxed int" requires "shared"
